--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,63 +1,151 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
-</head>
+  </head>
 
   <body>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+    <!-- Nav -->
+    <nav class="nav-bar">
+      <ul class="nav-menu">
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Vision</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul><!--
+      --><div class="logo-div">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </div>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+    </nav>
+    <!-- //End Nav -->
 
-  Get Started
+    <main>
+      <!-- Header -->
+      <header class="main-header">
+        <div class="intro">
+          <pre class="intro-text">
+          Innovation
+          On
+          Demand
+        </pre>
+          <button class="intro-btn">Get Started</button>
+        </div><!--
+      --><div class="intro-image-div">
+          <img class="header-image" src="img/header-img.png" alt="Image of a
+            code
+            snippet.">
+        </div>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </header>
+      <!-- //End Header -->
 
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      <!-- Top Section -->
+      <section class="top-section">
+        <article>
+          <h3>Features</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse
+            vel
+            tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis
+            augue justo, at imperdiet metus scelerisque quis.
+          </p>
+        </article>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+
+        <article>
+          <h3>About</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse
+            vel
+            tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis
+            augue justo, at imperdiet metus scelerisque quis.
+          </p>
+        </article>
+      </section>
+      <!-- //End Top Section -->
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code
+        snippets across the screen">
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+      <!-- Bottom Section -->
+      <section class="bottom-section">
+        <article>
+          <h3>Services</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse
+            vel
+            tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis
+            augue justo, at imperdiet metus scelerisque quis.
+          </p>
+        </article>
 
-  Copyright Great Idea! 2018
-  
+        <article>
+          <h3>Product</h3>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse
+            vel
+            tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis
+            augue justo, at imperdiet metus scelerisque quis.
+          </p>
+        </article>
+
+        <article>
+          <h3>Vision</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse
+            vel
+            tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis
+            augue justo, at imperdiet metus scelerisque quis.</p>
+        </article>
+      </section>
+      <!-- //End Bottom Section -->
+
+      <!-- Contact -->
+      <div class="contact">
+        <h3>Contact</h3>
+        <div class="contact-info">
+          <p>123 Way 456 Street
+            Somewhere, USA</p>
+          <p>1 (888) 888-8888</p>
+          <p>sales@greatidea.io</p>
+        </div>
+
+      </div>
+      <!-- //End Contact -->
+
+      <!-- Footer -->
+      <footer>
+        <p>Copyright Great Idea! 2018</p>
+      </footer>
+      <!-- //End Footer -->
+    </main>
+
   </body>
 </html>
