css: Style navbar and header sections

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -38,11 +38,11 @@
       <!-- Header -->
       <header class="main-header">
         <div class="intro">
-          <pre class="intro-text">
-          Innovation
-          On
-          Demand
-        </pre>
+          <div class="intro-text">
+            <h1>Innovation</h1>
+            <h1>On</h1>
+            <h1>Demand</h1>
+          </div>
           <button class="intro-btn">Get Started</button>
         </div><!--
       --><div class="intro-image-div">
