--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -131,7 +131,7 @@
       <div class="contact">
         <h3>Contact</h3>
         <div class="contact-info">
-          <p>123 Way 456 Street
+          <p>123 Way 456 Street <br />
             Somewhere, USA</p>
           <p>1 (888) 888-8888</p>
           <p>sales@greatidea.io</p>
